Fix minimized output height jump
Only in advanced mode.

--- a/core/src/main/web/app/styles/cells.scss
+++ b/core/src/main/web/app/styles/cells.scss
@@ -120,7 +120,7 @@ bk-section-cell {
       padding: 8px $grid-gutter-width;
 
       &.input-hidden {
-        padding-top: $grid-row-height*2;
+        padding-top: 26px;
       }
     }
 
